# wd_spi_lib

./: CMakeLists.txt  LICENSE  README.md  diagram.json  spi-processor.chip.c  spi-processor.chip.json  spi-processor.chip.wasm  spi_example.c  wokwi.toml
src/: custom_processor16.c  custom_processor32.c  custom_processor8.c
wd_spi/: CMakeLists.txt  spi_main_com.pio  wd_spi.c
wd_spi/include/: wd_spi.h
